--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,14 +1,14 @@
-<p id="notice"><%= notice %></p>
+<div class="page-header">
+  <h3>
+    <%= @link.title %><br>
+    <small><a href="<%= @link.url %>"><%= @link.url %></a></small><br>
+    <small>Submitted by <%= @link.user.email %></small>
+  </h3>
+</div>
 
-<p>
-  <strong>Title:</strong>
-  <%= @link.title %>
-</p>
+<% if @link.user == current_user %>
+  <%= link_to 'Edit', edit_link_path(@link) %> |
+  <%= link_to 'Delete', @link, method: :delete, data: { confirm: 'Are you sure?'}%> |
+<% end %>
 
-<p>
-  <strong>Url:</strong>
-  <%= @link.url %>
-</p>
-
-<%= link_to 'Edit', edit_link_path(@link) %> |
 <%= link_to 'Back', links_path %>
