--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -3,4 +3,14 @@
       <%= link_to link.title, link %><br>
       <small class="author">Submitted <%= time_ago_in_words(link.created_at) %> by <%= link.user.email %></small>
     </h3>
+    <div class="btn-group">
+      <%= link_to upvote_link_path(link), method: :put, class: "btn btn-default btn-sm" do %>
+        <span class="glyphicon glyphicon-chevron-up">Upvote</span>
+        <%= link.get_upvotes.size %>
+      <% end %>
+      <%= link_to downvote_link_path(link), method: :put, class: "btn btn-default btn-sm" do %>
+        <span class="glyphicon glyphicon-chevron-down">Downvote</span>
+        <%= link.get_downvotes.size %>
+      <% end %>
+    </div>
 <% end %>
