--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,7 +1,7 @@
 <% @links.each do |link| %>
     <h3>
       <%= link_to link.title, link %><br>
-      <small class="author">Submitted <%= time_ago_in_words(link.created_at) %> by <%= link.user.email %></small>
+      <small class="author">Submitted <%= time_ago_in_words(link.created_at) %> by <%= link.user.name %></small>
     </h3>
     <div class="btn-group">
       <%= link_to upvote_link_path(link), method: :put, class: "btn btn-default btn-sm" do %>
