--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -2,7 +2,7 @@
   <h3>
     <%= @link.title %><br>
     <small><a href="<%= @link.url %>"><%= @link.url %></a></small><br>
-    <small>Submitted by <%= @link.user.email %></small>
+    <small>Submitted by <%= @link.user.name %></small>
   </h3>
   <div class="btn-group">
     <%= link_to upvote_link_path(@link), method: :put, class: "btn btn-default btn-sm" do %>
