--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,15 +1,15 @@
 <% @links.each do |link| %>
     <h3>
       <%= link_to link.title, link %><br>
-      <small class="author">Submitted <%= time_ago_in_words(link.created_at) %> by <%= link.user.name %></small>
+      <small class="author">Submitted <%= time_ago_in_words(link.created_at) %> ago by <%= link.user.name %></small>
     </h3>
     <div class="btn-group">
-      <%= link_to upvote_link_path(link), method: :put, class: "btn btn-default btn-sm" do %>
-        <span class="glyphicon glyphicon-chevron-up">Upvote</span>
+      <%= link_to upvote_link_path(link), remote: true, method: :put, class: "btn btn-default btn-sm" do %>
+        <span class="glyphicon glyphicon-thumbs-up"></span>
         <%= link.get_upvotes.size %>
       <% end %>
-      <%= link_to downvote_link_path(link), method: :put, class: "btn btn-default btn-sm" do %>
-        <span class="glyphicon glyphicon-chevron-down">Downvote</span>
+      <%= link_to downvote_link_path(link), remote: true, method: :put, class: "btn btn-default btn-sm" do %>
+        <span class="glyphicon glyphicon-thumbs-down"></span>
         <%= link.get_downvotes.size %>
       <% end %>
     </div>
