--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -5,34 +5,33 @@
     <small>Submitted by <%= @link.user.name %></small>
   </h3>
   <div class="btn-group">
-    <%= link_to upvote_link_path(@link), method: :put, class: "btn btn-default btn-sm" do %>
-      <span class="glyphicon glyphicon-chevron-up">Upvote</span>
+    <%= link_to upvote_link_path(@link), remote: true, method: :put, class: "btn btn-default btn-sm" do %>
+      <span class="glyphicon glyphicon-thumbs-up"></span>
       <%= @link.get_upvotes.size %>
     <% end %>
-    <%= link_to downvote_link_path(@link), method: :put, class: "btn btn-default btn-sm" do %>
-      <span class="glyphicon glyphicon-chevron-down">Downvote</span>
+    <%= link_to downvote_link_path(@link), remote: true, method: :put, class: "btn btn-default btn-sm" do %>
+      <span class="glyphicon glyphicon-thumbs-down"></span>
       <%= @link.get_downvotes.size %>
     <% end %>
   </div>
+  <br>
+  <% if @link.user == current_user %>
+    <%= link_to 'Edit', edit_link_path(@link) %> |
+    <%= link_to 'Delete', @link, method: :delete, data: { confirm: 'Are you sure?'}%> |
+  <% end %>
+  <%= link_to 'Back', links_path %>
 </div>
 
-<% if @link.user == current_user %>
-  <%= link_to 'Edit', edit_link_path(@link) %> |
-  <%= link_to 'Delete', @link, method: :delete, data: { confirm: 'Are you sure?'}%> |
+<%= simple_form_for [@link, Comment.new] do |f| %>
+  <div class="field">
+    <%= f.text_field :body, class: 'form-control' %>
+  </div>
+  <br>
+  <%= f.submit "Add Comment", class: "btn btn-default" %>
 <% end %>
-
-<%= link_to 'Back', links_path %>
-
 <h3>
   <%= @link.comments.count %> Comments
 </h3>
 <div id="comments">
   <%= render :partial => @link.comments %>
 </div>
-<%= simple_form_for [@link, Comment.new] do |f| %>
-  <div class="field">
-    <%= f.text_area :body, class: 'form-control' %>
-  </div>
-  <br>
-  <%= f.submit "Add Comment", class: "btn btn-default" %>
-<% end %>
