Change comments display order

--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -33,5 +33,5 @@
   <%= @link.comments.count %> Comments
 </h3>
 <div id="comments">
-  <%= render :partial => @link.comments %>
+  <%= render :partial => @link.comments.order('created_at desc') %>
 </div>
