--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,8 +1,9 @@
-<% @links.each do |link| %>
-    <h3>
+<% @links.order('created_at desc').each do |link| %>
+    <h4>
       <%= link_to link.title, link %><br>
+      <small><a href="<%= link.url %>"><%= link.url %></a></small><br>
       <small class="author">Submitted <%= time_ago_in_words(link.created_at) %> ago by <%= link.user.name %></small>
-    </h3>
+    </h4>
     <div class="btn-group">
       <%= link_to upvote_link_path(link), remote: true, method: :put, class: "btn btn-default btn-sm" do %>
         <span class="glyphicon glyphicon-thumbs-up"></span>
