--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,8 +1,13 @@
 <% @links.order('created_at desc').each do |link| %>
     <h4>
       <%= link_to link.title, link %><br>
-      <small><a href="<%= link.url %>"><%= link.url %></a></small><br>
-      <small class="author">Submitted <%= time_ago_in_words(link.created_at) %> ago by <%= link.user.name %></small>
+      <small>
+        <a href="<%= link.url %>">
+          <%= link.url %>
+          <span class="glyphicon glyphicon-link"></span>
+        </a>
+      </small><br>
+      <small class="author">Submitted by <%= link.user.name %> <%= time_ago_in_words(link.created_at) %> ago</small>
     </h4>
     <div class="btn-group">
       <%= link_to upvote_link_path(link), remote: true, method: :put, class: "btn btn-default btn-sm" do %>
@@ -13,5 +18,8 @@
         <span class="glyphicon glyphicon-thumbs-down"></span>
         <%= link.get_downvotes.size %>
       <% end %>
+      <a class="btn btn-default btn-sm">
+        <%= link.comments.count %> Comments
+      </a>
     </div>
 <% end %>
