--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,42 @@
-<h1><%= @user.name %></h1>
+<h1>
+<%= @user.name %>
+<% if @user == current_user %> <small>( <%= link_to 'Edit', edit_user_registration_path %> )</small>
+<% end %>
+</h1>
+<h2>Links</h2>
+<% if @user.links.empty? %>
+  <div class="">
+    No Links Yet
+  </div>
+<% else %>
+  <% @user.links.order("created_at desc").each do |link| %>
+    <h4>
+      <%= link_to link.title, link %><br>
+      <small>
+        <a href="<%= link.url %>" class="text-success">
+          <%= link.url %>
+          <span class="glyphicon glyphicon-link"></span>
+        </a>
+      </small><br>
+      <small class="author"><%= time_ago_in_words(link.created_at) %> ago</small>
+    </h4>
+    <% if @user == current_user %>
+      <%= link_to 'Edit', edit_link_path(link) %> |
+      <%= link_to 'Delete', link, method: :delete, data: { confirm: 'Are you sure?'}%>
+      <br>
+    <% end %>
+    <div class="btn-group">
+      <%= link_to upvote_link_path(link), remote: true, method: :put, class: "btn btn-default btn-sm" do %>
+        <span class="glyphicon glyphicon-thumbs-up"></span>
+        <%= link.get_upvotes.size %>
+      <% end %>
+      <%= link_to downvote_link_path(link), remote: true, method: :put, class: "btn btn-default btn-sm" do %>
+        <span class="glyphicon glyphicon-thumbs-down"></span>
+        <%= link.get_downvotes.size %>
+      <% end %>
+      <%= link_to link_path(link), class: "btn btn-default btn-sm" do %>
+        <%= link.comments.count %> Comments
+      <% end %>
+    </div>
+  <% end %>
+<% end %>
