--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,4 +1,4 @@
-<% @links.order('created_at desc').each do |link| %>
+<% @links.each do |link| %>
     <h4>
       <%= link_to link.title, link %><br>
       <small>
