--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -11,15 +11,15 @@
   </h4>
   <div class="btn-group">
     <%= link_to upvote_link_path(link), remote: true, method: :put, class: "btn btn-default btn-sm" do %>
-      <span class="glyphicon glyphicon-thumbs-up"></span>
-      <%= link.get_upvotes.size %>
+      <span class="glyphicon glyphicon-thumbs-up" id="thums_up_<%= link.id %>"></span>
+      <span id="upvote_<%= link.id %>"><%= link.get_upvotes.size %></span>
     <% end %>
     <%= link_to downvote_link_path(link), remote: true, method: :put, class: "btn btn-default btn-sm" do %>
-      <span class="glyphicon glyphicon-thumbs-down"></span>
-      <%= link.get_downvotes.size %>
+      <span class="glyphicon glyphicon-thumbs-down" id="thums_down_<%= link.id %>"></span>
+      <span id="downvote_<%= link.id %>"><%= link.get_downvotes.size %></span>
     <% end %>
     <%= link_to link_path(link), class: "btn btn-default btn-sm" do %>
       <%= pluralize link.comments.count, "comment" %>
     <% end %>
-  </div>       
+  </div>
 <% end %>
