--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,13 +37,22 @@
 
 
     <div id="main" class="container">
+      <!--
       <% flash.each do |name, msg| %>
-        <%= content_tag(:div, msg, class:"alert alert-#{name}") %>
+        <%= content_tag(:div, msg, class:"alert alert-success alert-dismissible fade show", role:"alert") do %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <% end %>
       <% end %>
+      -->
+      <%= flash_messages %>
       <div id="container" class="col-md-9 center-block">
         <%= yield %>
       </div>
     </div>
 
   </body>
+
+  <footer></footer>
 </html>
